[package]
name = "dns-sniff-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = { version = "1.3" }
clap = { version = "3.2", features = ["derive"] }
from-to-repr = { version = "0.1" }
macaddr = { version = "1.0" }
pcap = { version = "0.10" }
tokio = { version = "1.21", features = ["full"] }
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
